<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <groupId>cn.com.thinkit.cloud</groupId>
  <artifactId>microservice-common-util</artifactId>
  <packaging>jar</packaging>
  <version>0.0.1</version>
  <description>常用工具类:字符串、日期、文件、加密、异常、分页等工具类</description>
 <url>http://www.thinkit.com.cn/</url>

<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
	</properties>

<!-- 使用最新的spring-boot版本 -->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.6.RELEASE</version>
	</parent>

 <dependencies>
        <dependency>
            <groupId>com.github.pagehelper</groupId>
            <artifactId>pagehelper-spring-boot-starter</artifactId>
            <version>1.1.0</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.7</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

         <!-- 支持swagger2 -->
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>2.7.0</version>
        </dependency>
        <!--原生的UI -->
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>2.7.0</version>
        </dependency>
        <!--美化的UI1 -->
        <dependency>
            <groupId>com.github.xiaoymin</groupId>
            <artifactId>swagger-bootstrap-ui</artifactId>
            <version>1.7.2</version>
        </dependency>

        <!--美化的UI2 -->
        <dependency>
            <groupId>com.github.caspar-chen</groupId>
            <artifactId>swagger-ui-layer</artifactId>
            <version>0.0.3</version>
        </dependency>
      
      <dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <scope>test</scope>
	</dependency>

    </dependencies>

<distributionManagement>
<!--         <repository> -->
<!--             <id>nexus-releases</id> -->
<!--             <url>http://192.168.96.88:8081/nexus/content/repositories/releases</url> -->
<!--         </repository> -->
<!--         <snapshotRepository> -->
<!--             <id>nexus-snapshots</id> -->
<!--             <url>http://192.168.96.88:8081/nexus/content/repositories/snapshots</url> -->
<!--         </snapshotRepository> -->
        
        <!--多种发布方式 https://issues.sonatype.org/ -->
        <snapshotRepository>
         <id>oss-snapshot</id>
         <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
         <id>oss-releases</id>
         <url> https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
	    
    </distributionManagement>
    
</project>
